--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.14",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-secure-store": "~12.8.1",
     "react-hook-form": "^7.51.0",
+    "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
-    "react-native-root-toast": "^3.5.1"
+    "react-native-image-picker": "^7.1.2",
+    "react-native-root-toast": "^3.5.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
